--- a/src/jobs/index.module.css
+++ b/src/jobs/index.module.css
@@ -82,5 +82,6 @@
 
   .jobs__wrapper {
     flex-wrap: wrap;
+    justify-content: center;
   }
 }
